--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18.2.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.21.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
