--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-locomotive-scroll": "^0.2.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
