--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+
+# Ignore the akgu-backend/ directory
+akgu-backend/
+
+# Ignore the src/.env file
+src/.env
