--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.21.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
